--- a/strings/de.lproj/Direction.strings
+++ b/strings/de.lproj/Direction.strings
@@ -1,144 +1,144 @@
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street */
-"directions.traveling.n" = "Fahrtrichtung: Nord";
+"directions.traveling.n" = "Fahrtrichtung: Norden";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street */
-"directions.traveling.ne" = "Fahrtrichtung: Nordost";
+"directions.traveling.ne" = "Fahrtrichtung: Nordosten";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street */
-"directions.traveling.e" = "Fahrtrichtung: Ost";
+"directions.traveling.e" = "Fahrtrichtung: Osten";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street */
-"directions.traveling.se" = "Fahrtrichtung: Südost";
+"directions.traveling.se" = "Fahrtrichtung: Südosten";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street */
-"directions.traveling.s" = "Fahrtrichtung: Süd";
+"directions.traveling.s" = "Fahrtrichtung: Süden";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street */
-"directions.traveling.sw" = "Fahrtrichtung: Südwest";
+"directions.traveling.sw" = "Fahrtrichtung: Südwesten";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street */
-"directions.traveling.w" = "Fahrtrichtung: West";
+"directions.traveling.w" = "Fahrtrichtung: Westen";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street */
-"directions.traveling.nw" = "Fahrtrichtung: Nordwest";
+"directions.traveling.nw" = "Fahrtrichtung: Nordwesten";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street */
-"directions.facing.n" = "Blickrichtung: Nord";
+"directions.facing.n" = "Blickrichtung: Norden";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street */
-"directions.facing.ne" = "Blickrichtung: Nordost";
+"directions.facing.ne" = "Blickrichtung: Nordosten";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street */
-"directions.facing.e" = "Blickrichtung: Ost";
+"directions.facing.e" = "Blickrichtung: Osten";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street */
-"directions.facing.se" = "Blickrichtung: Südost";
+"directions.facing.se" = "Blickrichtung: Südosten";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street */
-"directions.facing.s" = "Blickrichtung: Süd";
+"directions.facing.s" = "Blickrichtung: Süden";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street */
-"directions.facing.sw" = "Blickrichtung: Südwest";
+"directions.facing.sw" = "Blickrichtung: Südwesten";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street */
-"directions.facing.w" = "Blickrichtung: West";
+"directions.facing.w" = "Blickrichtung: Westen";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street */
-"directions.facing.nw" = "Blickrichtung: Nordwest";
+"directions.facing.nw" = "Blickrichtung: Nordwesten";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle. */
-"directions.heading.n" = "Gehrichtung: Nord";
+"directions.heading.n" = "Gehrichtung: Norden";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle. */
-"directions.heading.ne" = "Gehrichtung: Nordost";
+"directions.heading.ne" = "Gehrichtung: Nordosten";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle. */
-"directions.heading.e" = "Gehrichtung: Ost";
+"directions.heading.e" = "Gehrichtung: Osten";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle. */
-"directions.heading.se" = "Gehrichtung: Südost";
+"directions.heading.se" = "Gehrichtung: Südosten";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle. */
-"directions.heading.s" = "Gehrichtung: Süd";
+"directions.heading.s" = "Gehrichtung: Süden";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle. */
-"directions.heading.sw" = "Gehrichtung: Südwest";
+"directions.heading.sw" = "Gehrichtung: Südwesten";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle. */
-"directions.heading.w" = "Gehrichtung: West";
+"directions.heading.w" = "Gehrichtung: Westen";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle. */
-"directions.heading.nw" = "Gehrichtung: Nordwest";
+"directions.heading.nw" = "Gehrichtung: Nordwesten";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street {NumberedPlaceholder="%@"} */
-"directions.along.traveling.n" = "Auf %@, Fahrtrichtung Nord";
+"directions.along.traveling.n" = "Auf %@, Fahrtrichtung Norden";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street {NumberedPlaceholder="%@"} */
-"directions.along.traveling.ne" = "Auf %@, Fahrtrichtung Nordost";
+"directions.along.traveling.ne" = "Auf %@, Fahrtrichtung Nordosten";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street {NumberedPlaceholder="%@"} */
-"directions.along.traveling.e" = "Auf %@, Fahrtrichtung Ost";
+"directions.along.traveling.e" = "Auf %@, Fahrtrichtung Osten";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street {NumberedPlaceholder="%@"} */
-"directions.along.traveling.se" = "Auf %@, Fahrtrichtung Südost";
+"directions.along.traveling.se" = "Auf %@, Fahrtrichtung Südosten";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street {NumberedPlaceholder="%@"} */
-"directions.along.traveling.s" = "Auf %@, Fahrtrichtung Süd";
+"directions.along.traveling.s" = "Auf %@, Fahrtrichtung Süden";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street {NumberedPlaceholder="%@"} */
-"directions.along.traveling.sw" = "Auf %@, Fahrtrichtung Südwest";
+"directions.along.traveling.sw" = "Auf %@, Fahrtrichtung Südwesten";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street {NumberedPlaceholder="%@"} */
-"directions.along.traveling.w" = "Auf %@, Fahrtrichtung West";
+"directions.along.traveling.w" = "Auf %@, Fahrtrichtung Westen";
 
 /* Traveling in a vehicle such as a train, bus, car with a cardinal direction, %@ is a road name. Whenever the vehicle changes roads, the app will announce a location update by saying the direction the vehicle is travelling in and the name of the road e.g. Travelling east along High Street {NumberedPlaceholder="%@"} */
-"directions.along.traveling.nw" = "Auf %@, Fahrtrichtung Nordwest";
+"directions.along.traveling.nw" = "Auf %@, Fahrtrichtung Nordwesten";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.facing.n" = "Auf %@, Blickrichtung Nord";
+"directions.along.facing.n" = "Auf %@, Blickrichtung Norden";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.facing.ne" = "Auf %@, Blickrichtung Nordost";
+"directions.along.facing.ne" = "Auf %@, Blickrichtung Nordosten";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.facing.e" = "Auf %@, Blickrichtung Ost";
+"directions.along.facing.e" = "Auf %@, Blickrichtung Osten";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.facing.se" = "Auf %@, Blickrichtung Südost";
+"directions.along.facing.se" = "Auf %@, Blickrichtung Südosten";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.facing.s" = "Auf %@, Blickrichtung Süd";
+"directions.along.facing.s" = "Auf %@, Blickrichtung Süden";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.facing.sw" = "Auf %@, Blickrichtung Südwest";
+"directions.along.facing.sw" = "Auf %@, Blickrichtung Südwesten";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.facing.w" = "Auf %@, Blickrichtung West";
+"directions.along.facing.w" = "Auf %@, Blickrichtung Westen";
 
 /* Facing a cardinal direction. If the user is not travelling in a vehicle, or not moving (e.g. on foot) but is stationary along a road somewhere, the application will know which way the user is facing e.g. Facing east along High Street, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.facing.nw" = "Auf %@, Blickrichtung Nordwest";
+"directions.along.facing.nw" = "Auf %@, Blickrichtung Nordwesten";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.heading.n" = "Auf %@, Gehrichtung Nord";
+"directions.along.heading.n" = "Auf %@, Gehrichtung Norden";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.heading.ne" = "Auf %@, Gehrichtung Nordost";
+"directions.along.heading.ne" = "Auf %@, Gehrichtung Nordosten";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.heading.e" = "Auf %@, Gehrichtung Ost";
+"directions.along.heading.e" = "Auf %@, Gehrichtung Osten";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.heading.se" = "Auf %@, Gehrichtung Südost";
+"directions.along.heading.se" = "Auf %@, Gehrichtung Südosten";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.heading.s" = "Auf %@, Gehrichtung Süd";
+"directions.along.heading.s" = "Auf %@, Gehrichtung Süden";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.heading.sw" = "Auf %@, Gehrichtung Südwest";
+"directions.along.heading.sw" = "Auf %@, Gehrichtung Südwesten";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle, %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.heading.w" = "Auf %@, Gehrichtung West";
+"directions.along.heading.w" = "Auf %@, Gehrichtung Westen";
 
 /* Walking with a cardinal direction. If the user is walking and heading along a road in a specific direction then the app will know the direction of travel of the user along that road e.g. Heading east along High Street. This is different to when a user is moving in a vehicle., %@ is a road name {NumberedPlaceholder="%@"} */
-"directions.along.heading.nw" = "Auf %@, Gehrichtung Nordwest";
+"directions.along.heading.nw" = "Auf %@, Gehrichtung Nordwesten";
 
